Actualizacion Tema Semanal 4

--- a/Semana 4 19-10-15.md
+++ b/Semana 4 19-10-15.md
@@ -1,3 +1,48 @@
 #Tema de la semana lunes 19 de Octubre del 2015
 
 ##TemaSemanal:  ¿Que habilidades deberia tener un programador para ser considerado Full stack?
+
+##Alejandro Soto Cisterna
+
+según como yo lo entiendo, se considera desarrollador full stack a aquel capaz de participar en cualquier parte del software, específicamente en el front-end, en el back-end y en la capa de persistencia, aunque no me termina de convencer esa definición realmente xd
+
+##Elvis Alan Romero Carvajal
+
+Bueno, últimamente esta de moda el termino fullstack, y creo que esto al menos en chile ha ido creciendo gracias a las startups, ya que se necesitan que sepan "de todo un poco" y se puedan manejar en las distintas etapas y áreas de un proyecto. Entiendo que por fullstack developer estamos hablando de una persona que se maneja en varias areas de la informatica y telecomunicaciones, que puede entablar y analizar temas de redes, infraestructura, programacion y modelo de negocios, etc... El que plantea y ejecuta... Al menos esa es mi apreciación
+
+## Ricardo Castillo DiruzCode
+
+Para mi el termino FullStack esta mas prostituido que puta del golf (me han contado, el amigo de un amigo).Mi percepción de fullstack es un Dev o Ing que tenga muy bien nutrida la parte lógica de la programación y estructura o arquitectura de software de manera que sin importar el proyecto que tome, con la tecnología que sea lo sabra llevar a cabo con gran éxito ya que se vuelve completamente independiente de las herramientas a usar.
+
+##Mauricio Lineros Olivares
+
+Mi Percepcion es que un full stack se maneja dentro de las siguientes esferas: - Front End(Html - css - JS - Sass - Less - Nociones sobre Diseño) - Bases de Datos (Relacionales o No) - Back End (algunos lenguajes a eleccion) Arquitectura de Software y desarrollo de proyectos. Dentro de estas esferas yo veo a un Full Stack, el cual quiero ser Emoticón grin
+
+##Kevin Phill Zelada Ruff
+
+Para ser full stack, no se si algo en concreto más bien a sería alguien que tiene las bases suficientes para poder adaptarse a la tecnología necesaria para un proyecto.
+
+##Yudenia Ramírez
+
+Mas alla de adaptarse a las tecnologias y saber programar en las diferentes capas, para mi un programador fullstack es como un arquitecto de software, un programador que ha logrado/posee el expertise como para tomar un requerimiento y convertirlo en una app funcional, desde su definicion arquitectonica hasta su despliegue en entorno de produccion.
+
+##Pía Gómez
+
+osea un fullstack es un ingeniero informático con un alto grado de expertiz y profesionalismo?
+
+## Kevin Phill Zelada Ruff Pía Gómez no necesariamente, conozco developers que puedo llamar fullstack (secos) y no son ingenieros.
+
+------
+    Yudenia Ramírez:
+
+      la parte de ingenieros, da igual el "titulo", el tema es que sea capaz de hacer lo comentado...
+
+    Kevin Phill Zelada:
+
+      Ruff así es.
+
+    Pía Gómez:
+
+      kevin no refería al titulo "ingeniero informatico", si no mas bien la persona capacitada para ello, el titulo no convierte a una persona capacitada realmente, solo avala que se ha dedicado màs de 3 o 5 años estudiando y con un respaldo evaluativo por una instituciòn, todo estipulado en un papel timbrado y firmado xd
+
+------
